--- a/main.css
+++ b/main.css
@@ -7,22 +7,20 @@ body {
     font-family: Tahoma, Arial;
 }
 
-div.menu {
+.menu {
     width: 100%;
     background-color: #4d5791;
     height: 44px;
     padding: 0 40px;
 }
-
-div.menu ul,
-div.menu ul li {
+.menu nav li{
     margin: 0;
     padding: 0 ;
     list-style: none;
     display: inline-block;
 }
 
-div.menu ul li a {
+.menu nav li a {
     display: block;
     padding: 0 20px;
     line-height: 44px;
@@ -32,34 +30,34 @@ div.menu ul li a {
     margin: 0;
 }
 
-div.menu ul li a:hover  {
+.menu nav li a:hover  {
     background-color: white;
     color: #4d5791;
 }
 
-div.hero {
+section.hero {
     height: 350px;
     background-color: #b4c6f0;
-    background-image: url('/bg.png');
+    background-image: url('./bg.png');
     background-size: 400px;
     background-repeat: no-repeat;
     background-position: center bottom;
     padding-top: 40px;
 }
 
-div.hero h1,
-div.hero h2 {
+section.hero h1,
+section.hero h2 {
     text-align: center;
     margin: 0;
 }
 
-div.hero h1 {
+section.hero h1 {
     color: #fff;
     font-size: 4.2em;
     margin-bottom: 20px;
 }
 
-div.hero h2 {
+section.hero h2 {
     color: #4d5791;
 }
 
@@ -83,7 +81,7 @@ div.hero h2 {
     text-align: center;
 }
 
-.container div.text-box {
+.container article.text-box {
     display: inline-block;
     width: 100%;
     max-width: 340px;
@@ -92,7 +90,7 @@ div.hero h2 {
 }
 
 @media screen and (min-width: 768px) {
-    .container .div.text-box {
+    .container .articl.text-box {
         margin: 10px;
     }
 }
