--- a/main.css
+++ b/main.css
@@ -57,8 +57,9 @@ section.hero h1 {
     margin-bottom: 20px;
 }
 
+/*This is an A11y Change */
 section.hero h2 {
-    color: #4d5791;
+    color: #0d24a9;
 }
 
 .container {
@@ -85,12 +86,13 @@ section.hero h2 {
     display: inline-block;
     width: 100%;
     max-width: 340px;
-    text-align: justify;
+    /*This is an A11y Change */
+    text-align: left;
     margin: 20px;
 }
 
 @media screen and (min-width: 768px) {
-    .container .articl.text-box {
+    .container .article.text-box {
         margin: 10px;
     }
 }
