--- a/personal-budget/src/app/homepage/homepage.component.html
+++ b/personal-budget/src/app/homepage/homepage.component.html
@@ -9,7 +9,7 @@
           app will help you with that!'</p>
       </pb-article>
 
-      <article class="text-box">
+      <pb-article>
 
               <h1>Alerts</h1>
 
@@ -17,26 +17,25 @@
           <p>
               What if your clothing budget ended? You will get an alert. The goal is to never go over the budget.
           </p>
-      </article>
-<!-- This is a Semantic HTML Change -->
-      <article class="text-box">
-          <header>
+      </pb-article>
+
+      <pb-article>
+
               <h1>Results</h1>
-          </header>
 
           <p>
               People who stick to a financial plan, budgeting every expense, get out of debt faster!
               Also, they to live happier lives... since they expend without guilt or fear...
               because they know it is all good and accounted for.
           </p>
-      </article>
+      </pb-article>
 <!-- Chart  -->
-      <article>
+      <pb-article>
               <h1>Chart</h1>
               <p>
               <canvas id="myChart" width="400" height="400"></canvas>
               </p>
-      </article>
+      </pb-article>
   </div>
   <section>
       <body>
