added upto points 4

--- a/personal-budget/src/app/homepage/homepage.component.html
+++ b/personal-budget/src/app/homepage/homepage.component.html
@@ -1,4 +1,5 @@
 <main class="container center">
+  <pb-breadcrumbs></pb-breadcrumbs>
 
   <div class="page-area">
 
@@ -32,7 +33,9 @@
 <!-- Chart  -->
       <pb-article>
               <h1>Chart</h1>
+
               <p>
+
               <canvas id="myChart" width="400" height="400"></canvas>
               </p>
       </pb-article>
