Complete  instruction 6_dataservice

--- a/personal-budget/src/app/homepage/homepage.component.html
+++ b/personal-budget/src/app/homepage/homepage.component.html
@@ -33,7 +33,7 @@
 <!-- Chart  -->
       <pb-article>
               <h1>Chart</h1>
-
+            <p>is workibg</p>
               <p>
 
               <canvas id="myChart" width="400" height="400"></canvas>
