Complete  instruction 6_dataservice_updated

--- a/personal-budget/src/app/about/about.component.html
+++ b/personal-budget/src/app/about/about.component.html
@@ -1,1 +1,2 @@
-<p>about works!</p>
+<p>This application is created using Angular version 10</p>
+<p>Personal Budget app provide interface to show budget information using graphic charts </p>
