--- a/personal-budget/src/app/contact/contact.component.html
+++ b/personal-budget/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<h4>Contact Details</h4>
-<h5>Name: Megha Nawale</h5>
-<h6>Contact Number:1234567890</h6>
-<h6>Email ID:mnawale@uncc.edu</h6>
+<h1>Contact Details</h1>
+<h3>Name: Megha Nawale</h3>
+<p>Contact Number:1234567890</p>
+<p>Email ID:mnawale@uncc.edu</p>
