--- a/personal-budget/src/app/login/login.component.html
+++ b/personal-budget/src/app/login/login.component.html
@@ -1,1 +1,12 @@
-<p>login works!</p>
+<h3>Enter Email Id and password to Login</h3>
+<label for="Email"> Email ID:</label>
+
+<input type="text" id="email" name="Email_Id" required
+       minlength="4" maxlength="40" size="40">
+    <br>
+
+<label for="password"> password:</label>
+
+<input type="password" id="email" name="Email_Id" required
+       minlength="4" maxlength="40" size="40">
+
