Personal-budget-angular-completed_5

--- a/personal-budget/src/app/homepage/homepage.component.html
+++ b/personal-budget/src/app/homepage/homepage.component.html
@@ -38,18 +38,16 @@
 
               <canvas id="myChart" width="400" height="400"></canvas>
               </p>
+
       </pb-article>
-
-
   </div>
+  <header>
+    <h1>Angular + D3</h1>
+  </header>
+  <pb-pie></pb-pie>
+
 
 </main>
-<script src="https://d3js.org/d3.v4.js"></script>
-<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-
-<!-- Create a div where the graph will take place -->
-<p>d3chart</p>
-<div id="my_dataviz"></div>
 
 
 
